Prevent start or end images from shrinking smaller than 10em
The 30% was too large for most situations, so reduce it to
10em, and also prevent it being smaller than that.

Bug: T369245

--- a/resources/link-cards.less
+++ b/resources/link-cards.less
@@ -82,7 +82,8 @@
 
 	&.ext-linkcards-card-image-pos-start a .ext-linkcards-image,
 	&.ext-linkcards-card-image-pos-end a .ext-linkcards-image {
-		width: 30%;
+		width: 10em;
+		flex-shrink: 0;
 	}
 
 	a:link:hover {
